--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html>
+    <head> <link rel="stylesheet" type="text/css" href="style.css" /></head>
+<head><link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+  />
+  <link rel="stylesheet" type="text/css" href="company.css"/>
+  <link rel="stylesheet" type="text/css" href="engineering-department.css"/>
+  <link rel="stylesheet" type="text/css" href="project-x-launch.css"/>
+  <link rel="stylesheet" type="text/css" href="typography.css" /></head>
+  <head>
+    <title>Cat Perry's Favorite Cats</title>
+</head>
+    <body>
+        <p><!-- This is a comment! --></p>
+    </body>
+</html>
